logs/atreal.mailservices.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/atreal'...
Listing './lib/python3.5/site-packages/atreal/mailservices'...
Listing './lib/python3.5/site-packages/atreal/mailservices/browser'...
Compiling './lib/python3.5/site-packages/atreal/mailservices/browser/forms.py'...
***   File "./lib/python3.5/site-packages/atreal/mailservices/browser/forms.py", line 288
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/atreal/mailservices/locales'...
Listing './lib/python3.5/site-packages/atreal/mailservices/locales/en'...
Listing './lib/python3.5/site-packages/atreal/mailservices/locales/en/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/atreal/mailservices/locales/fr'...
Listing './lib/python3.5/site-packages/atreal/mailservices/locales/fr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/atreal/mailservices/locales/nl'...
Listing './lib/python3.5/site-packages/atreal/mailservices/locales/nl/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/atreal/mailservices/profiles'...
Listing './lib/python3.5/site-packages/atreal/mailservices/profiles/default'...
Listing './lib/python3.5/site-packages/atreal.mailservices-1.1.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/z3c'...
Listing './lib/python3.5/site-packages/z3c/autoinclude'...
Listing './lib/python3.5/site-packages/z3c/autoinclude/tests'...
Listing './lib/python3.5/site-packages/z3c/autoinclude/tests/APackage'...
Listing './lib/python3.5/site-packages/z3c/autoinclude/tests/APackage/a'...
Listing './lib/python3.5/site-packages/z3c/autoinclude/tests/BCPackage'...
Listing './lib/python3.5/site-packages/z3c/autoinclude/tests/BCPackage/b'...
Listing './lib/python3.5/site-packages/z3c/autoinclude/tests/BCPackage/b/c'...
Listing './lib/python3.5/site-packages/z3c/autoinclude/tests/BasePackage'...
Listing './lib/python3.5/site-packages/z3c/autoinclude/tests/BasePackage/basepackage'...
Listing './lib/python3.5/site-packages/z3c/autoinclude/tests/FooPackage'...
Listing './lib/python3.5/site-packages/z3c/autoinclude/tests/FooPackage/foo'...
Listing './lib/python3.5/site-packages/z3c/autoinclude/tests/SRCPackage'...
Listing './lib/python3.5/site-packages/z3c/autoinclude/tests/SRCPackage/src'...
Listing './lib/python3.5/site-packages/z3c/autoinclude/tests/SRCPackage/src/funsrc'...
Listing './lib/python3.5/site-packages/z3c/autoinclude/tests/SiblingPackage'...
Listing './lib/python3.5/site-packages/z3c/autoinclude/tests/SiblingPackage/F'...
Listing './lib/python3.5/site-packages/z3c/autoinclude/tests/SiblingPackage/F/G'...
Listing './lib/python3.5/site-packages/z3c/autoinclude/tests/SiblingPackage/F/H'...
Listing './lib/python3.5/site-packages/z3c/autoinclude/tests/TestDirective'...
Listing './lib/python3.5/site-packages/z3c/autoinclude/tests/TestDirective/testdirective'...
Listing './lib/python3.5/site-packages/z3c/autoinclude/tests/XYZPackage'...
Listing './lib/python3.5/site-packages/z3c/autoinclude/tests/XYZPackage/x'...
Listing './lib/python3.5/site-packages/z3c/autoinclude/tests/XYZPackage/x/y'...
Listing './lib/python3.5/site-packages/z3c/autoinclude/tests/XYZPackage/x/y/z'...
Listing './lib/python3.5/site-packages/z3c/autoinclude/tests/base2'...
Listing './lib/python3.5/site-packages/z3c/autoinclude/tests/base2/base2'...
Listing './lib/python3.5/site-packages/z3c/autoinclude/tests/base2_plug'...
Listing './lib/python3.5/site-packages/z3c/autoinclude/tests/base2_plug/base2'...
Listing './lib/python3.5/site-packages/z3c/autoinclude/tests/base2_plug/base2/plug'...
Listing './lib/python3.5/site-packages/z3c/autoinclude/tests/enolp.ppa.bar'...
Listing './lib/python3.5/site-packages/z3c/autoinclude/tests/enolp.ppa.bar/enolp'...
Listing './lib/python3.5/site-packages/z3c/autoinclude/tests/enolp.ppa.bar/enolp/ppa'...
Listing './lib/python3.5/site-packages/z3c/autoinclude/tests/enolp.ppa.bar/enolp/ppa/bar'...
Listing './lib/python3.5/site-packages/z3c/autoinclude/tests/enolp.ppa.foo'...
Listing './lib/python3.5/site-packages/z3c/autoinclude/tests/enolp.ppa.foo/enolp'...
Listing './lib/python3.5/site-packages/z3c/autoinclude/tests/enolp.ppa.foo/enolp/ppa'...
Listing './lib/python3.5/site-packages/z3c/autoinclude/tests/enolp.ppa.foo/enolp/ppa/foo'...
Listing './lib/python3.5/site-packages/z3c.autoinclude-0.3.7.dist-info'...
Listing './lib/python3.5/site-packages/zc'...
Listing './lib/python3.5/site-packages/zc/buildout'...
Listing './lib/python3.5/site-packages/zc.buildout-2.10.0.dist-info'...
Listing './lib/python3.5/site-packages/zope'...
Listing './lib/python3.5/site-packages/zope/configuration'...
Listing './lib/python3.5/site-packages/zope/configuration/tests'...
Listing './lib/python3.5/site-packages/zope/configuration/tests/excludedemo'...
Listing './lib/python3.5/site-packages/zope/configuration/tests/excludedemo/sub'...
Listing './lib/python3.5/site-packages/zope/configuration/tests/samplepackage'...
Listing './lib/python3.5/site-packages/zope/dottedname'...
Listing './lib/python3.5/site-packages/zope/event'...
Listing './lib/python3.5/site-packages/zope/i18nmessageid'...
Listing './lib/python3.5/site-packages/zope/interface'...
Listing './lib/python3.5/site-packages/zope/interface/common'...
Listing './lib/python3.5/site-packages/zope/interface/common/tests'...
Listing './lib/python3.5/site-packages/zope/interface/tests'...
Listing './lib/python3.5/site-packages/zope/schema'...
Listing './lib/python3.5/site-packages/zope/schema/tests'...
Listing './lib/python3.5/site-packages/zope.configuration-4.1.0.dist-info'...
Listing './lib/python3.5/site-packages/zope.dottedname-4.2.dist-info'...
Listing './lib/python3.5/site-packages/zope.event-4.3.0.dist-info'...
Listing './lib/python3.5/site-packages/zope.i18nmessageid-4.1.0.dist-info'...
Listing './lib/python3.5/site-packages/zope.interface-4.4.3.dist-info'...
Listing './lib/python3.5/site-packages/zope.schema-4.5.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
